--- a/deployments/deployment.yaml
+++ b/deployments/deployment.yaml
@@ -36,6 +36,14 @@ rules:
   - create
   - update
   - delete
+- apiGroups:
+  - rancher.k8s.binbash.org
+  resources:
+  - floatingippools
+  verbs:
+  - get
+  - list
+  - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
